# tabooli

./: CMakeLists.txt  README.md
cmake/: tabooli.cmake
inc/tabooli/: boolean.hpp  combinator.hpp  logical_operators.hpp  ostream_operators.hpp  tabooli.hpp  visitor.hpp
inc/tabooli/detail/: binary_tree.hpp  deque.hpp  expression.hpp  expression_node.hpp  list.hpp  nary_operator.hpp  operator_code.hpp  operators.hpp  overload.hpp  unary_operator.hpp  undef_operator_macros.hpp  vector.hpp
tests/: CMakeLists.txt  logical_operators.cpp  ostream_operators.cpp  visitor.cpp
tests/test_cases/: binary_tree.cpp  boolean.cpp  expression.cpp
tests/utility/: test_data.cpp  test_data.hpp
